--- a/projeto-ex02/pom.xml
+++ b/projeto-ex02/pom.xml
@@ -6,11 +6,13 @@
     <groupId>br.com.treinamento</groupId>
     <artifactId>projeto-ex02</artifactId>
     <version>1.0.0</version>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>br.com.basis</groupId>
+            <groupId>br.com.treinamento</groupId>
             <artifactId>projeto-ex01</artifactId>
             <version>1.0.0</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
